<resources>
    <string name="app_name">MyCons</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="whatDo">What do you want to do?</string>
    <string name="createButton">create MyCons</string>

    <string name="hello">Hello World!</string>
    <string name="take_picture">Take Picture</string>
    <string name="choose_from_sd">Open Picture</string>
    <string name="image_uri_flag">IMAGE_URI</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="camera">Camera</string>
    <string name="brightness">Brightness</string>
    <string name="crop">Crop</string>
    <string name="rotate">Rotate</string>
    <string name="rotate_right">Rotate Right</string>
    <string name="rotate_left">Rotate Left</string>
    <string name="save">Save</string>
    <string name="processed_image">processed image</string>
    <string name="image_desc">processed image</string>
    <string name="splash_desc">splash</string>
    <string name="filters">Filters</string>
    <string name="back">Back to editor</string>
    <string name="email">Email</string>
    <string name="photo_saved_info">Photo Saved</string>
    <string name="save_photo_prompt">Save photo before sending it</string>
    <string name="default_fb_photo_description">Uploaded from REC Photo Editor, best photo editor EVER!</string>
    <string name="photo_description_label">Post on Facebook</string>
    <string name="post_on_facebook_label">Post on Facebook</string>
    <string name="log_out_message">You have logged out!</string>
    <string name="log_in">Log in</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="picasa">Picasa</string>
    <string name="select">Select</string>
    <string name="share">Share</string>
    <string name="log_out">Log out</string>
    <string name="unknown">Unknown</string>
    <string name="change_account">Change account</string>
    <string name="please_choose_to_google_account_first">Please choose to Google Account first</string>
    <string name="please_login_to_twitter_first">Please login to Twitter first</string>
    <string name="please_login_to_facebook_first">Please login to Facebook first</string>
    <string name="_message_to_facebook_send_succesfully">- Message to Facebook send succesfully\n</string>
    <string name="_sending_message_to_facebook_failed_">- Sending message to Facebook failed\n </string>
    <string name="_message_to_twitter_send_succesfully">- Message to Twitter send succesfully\n</string>
    <string name="_sending_message_to_twitter_failed_">- Sending message to Twitter failed \n </string>
    <string name="_message_to_picasa_send_succesfully">- Message to Picasa send succesfully \n </string>
    <string name="_sending_message_to_picasa_failed_">- Sending message to Picasa failed, please check you Picasa settings \n"</string>
    <string name="photo_uploaded_succesfully">Photo uploaded succesfully</string>
    <string name="photo_upload_failed_see_datails_">"Photo upload failed. See datails: "</string>
    <string name="select_a_google_account">Select a Google account</string>
    <string name="please_wait_picture_is_uploading">Please wait picture is uploadingג€¦</string>
    <string name="about_us_text1">REC Photo Editor was developed under REC Labs program.
          </string>
    <string name="about_us_text2">Detail program description as well as application description can be found on our webstie in a Labs tab.
          </string>
    <string name="about_us_text3">In case of any question please mail us on:\nrecsolmobile@rec-global.com
          </string>
    <string name="rec_photo_editor_logo">REC Photo Editor Logo</string>

    <array name="images_array">
        <item>http://lh5.ggpht.com/_hepKlJWopDg/TB-_WXikaYI/AAAAAAAAElI/715k4NvBM4w/s144-c/IMG_0075.JPG</item>
        <item>http://lh4.ggpht.com/_4f1e_yo-zMQ/TCe5h9yN-TI/AAAAAAAAXqs/8X2fIjtKjmw/s144-c/IMG_1786.JPG</item>
        <item>http://lh3.ggpht.com/_GEnSvSHk4iE/TDSfmyCfn0I/AAAAAAAAF8Y/cqmhEoxbwys/s144-c/_MG_3675.jpg</item>
        <item>http://lh6.ggpht.com/_ZN5zQnkI67I/TCFFZaJHDnI/AAAAAAAABVk/YoUbDQHJRdo/s144-c/P9250508.JPG</item>
        <item>http://lh4.ggpht.com/_XjNwVI0kmW8/TCOwNtzGheI/AAAAAAAAC84/SxFJhG7Scgo/s144-c/0014.jpg</item>
        <item>http://lh6.ggpht.com/_Nsxc889y6hY/TBp7jfx-cgI/AAAAAAAAHAg/Rr7jX44r2Gc/s144-c/IMGP9775a.jpg</item>
        <item>http://lh6.ggpht.com/_ZN5zQnkI67I/TCFFZaJHDnI/AAAAAAAABVk/YoUbDQHJRdo/s144-c/P9250508.JPG</item>
    </array>

    <array name="headline_array">
        <item>Dance of Democracy</item>
        <item>Major Naxal attacks in the past</item>
        <item>BCCI suspends Gurunath pending inquiry </item>
        <item>Life convict can`t claim freedom after 14 yrs: SC</item>
        <item>Indian Army refuses to share info on soldiers mutilated at LoC</item>
        <item>French soldier stabbed; link to Woolwich attack being probed</item>
        <item>Life convict can`t claim freedom after 14 yrs: SC</item>
    </array>

    <string name="enter_search_term">enter search terms</string>
    <string name="title_activity_image_display">Matching: </string>
    <string name="app_title">Image Search</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="image_size">Image Size</string>
    <string name="color_filter">Color Filter</string>
    <string name="image_type">Image Type</string>
    <string name="site_filter">Site filter</string>
    <string name="yahoo_com_site_filter">yahoo.com</string>
    <string name="create_mycon">Create Mycons</string>

    <string-array name="image_size_array">
        <item>icon</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
        <item>xxlarge</item>
        <item>huge</item>
    </string-array>
    <string-array name="safe_array">
        <item>active</item>
        <item>moderate</item>
    </string-array>
    <string-array name="color_filter_array">
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>
    <string-array name="image_type_filter_array">
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>


</resources>
