<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layoutDirection="ltr">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image_desc"
        android:src="@mipmap/orange"
        android:background="#ffffff"
        android:backgroundTint="#ffffff"
        android:backgroundTintMode="src_over" />

    <LinearLayout
        android:id="@+id/top_options"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#8C000000"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:contentDescription="@string/back"
            android:src="@drawable/back" />

        <ImageButton
            android:id="@+id/brightness_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="#00000000"
            android:contentDescription="@string/brightness"
            android:src="@drawable/brightness" />

        <ZoomButton
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:id="@+id/circle_crop_button"
            android:src="@drawable/circle" />

        <ImageButton
            android:id="@+id/crop_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="#00000000"
            android:contentDescription="@string/crop"
            android:src="@drawable/crop" />

        <ImageButton
            android:id="@+id/rotate_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="#00000000"
            android:contentDescription="@string/rotate"
            android:src="@drawable/rotate" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_options"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#8C000000"
        android:orientation="horizontal"
        android:weightSum="1">

        <ZoomButton
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:id="@+id/MyconsKeyboardButton"
            android:src="@mipmap/ic_launcher"
            android:background="#00000000"
            android:layout_below="@+id/createAndMoveButton"
            android:layout_alignLeft="@+id/createAndMoveButton"
            android:layout_alignStart="@+id/createAndMoveButton"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/pickButton"
            android:layout_alignEnd="@+id/pickButton" />

        <ImageButton
            android:id="@+id/save_button"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:contentDescription="@string/save"
            android:src="@drawable/save"
            android:layout_weight="0.28" />

        <ZoomButton
            android:layout_width="71dp"
            android:layout_height="match_parent"
            android:id="@+id/googleSearchImageButton"
            android:src="@drawable/search_icon" />

        <ZoomButton
            android:id="@+id/choosePic_button"
            android:layout_width="72dp"
            android:layout_height="60dp"
            android:background="#00000000"
            android:contentDescription="@string/email"
            android:src="@drawable/photos_b"
            android:baselineAlignBottom="false"
            android:focusable="false"
            android:focusableInTouchMode="false" />

        <ZoomButton
            android:id="@+id/camera_button"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:contentDescription="@string/camera"
            android:src="@drawable/camera_big"
            android:layout_weight="0.1" />

    </LinearLayout>

</merge>